[gd_scene load_steps=8 format=2]

[ext_resource path="res://Juego/UI/Minimapa/Iconos/minimapa_fondo.png" type="Texture" id=1]
[ext_resource path="res://Juego/UI/Minimapa/Minimap.gd" type="Script" id=2]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/icono_player.png" type="Texture" id=3]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/icon_plusLarge.png" type="Texture" id=4]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/station_C.png" type="Texture" id=5]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/icono_interceptor.png" type="Texture" id=6]
[ext_resource path="res://Juego/UI/Minimapa/Iconos/star_large.png" type="Texture" id=7]

[node name="Minimap" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -180.0
margin_right = 144.0
margin_bottom = -18.0
rect_min_size = Vector2( 288, 162 )
script = ExtResource( 2 )

[node name="CuadroMinimap" type="NinePatchRect" parent="."]
margin_right = 288.0
margin_bottom = 162.0
texture = ExtResource( 1 )

[node name="ContenedorIconos" type="MarginContainer" parent="CuadroMinimap"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="ZonaRenderizado" type="TextureRect" parent="CuadroMinimap/ContenedorIconos"]
margin_right = 278.0
margin_bottom = 152.0

[node name="IconoPlayer" type="Node2D" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado"]
position = Vector2( 128, 73 )

[node name="IconoPlayer" type="Sprite" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado/IconoPlayer"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="IconoBaseEnemiga" type="Node2D" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado"]
visible = false
position = Vector2( 232, 41 )

[node name="IconoBaseEnemiga2" type="Sprite" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado/IconoBaseEnemiga"]
modulate = Color( 1, 0, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="IconoEstacionRecarga" type="Node2D" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado"]
visible = false
position = Vector2( 240, 109 )

[node name="IconoEstacionRecarga" type="Sprite" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado/IconoEstacionRecarga"]
modulate = Color( 0.352941, 1, 0, 1 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="IconoInterceptor" type="Node2D" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado"]
visible = false
position = Vector2( 54, 46 )

[node name="IconoInterceptor" type="Sprite" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado/IconoInterceptor"]
modulate = Color( 0.862745, 0.54902, 0, 1 )
rotation = 1.5708
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="IconoRele" type="Node2D" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado"]
visible = false
position = Vector2( 50, 117 )

[node name="IconoRele" type="Sprite" parent="CuadroMinimap/ContenedorIconos/ZonaRenderizado/IconoRele"]
modulate = Color( 0.686275, 0, 1, 1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="TweenVisibilidad" type="Tween" parent="."]

[node name="TimerVisibilidad" type="Timer" parent="." groups=["contenedor_info"]]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="TimerVisibilidad" to="." method="_on_TimerVisibilidad_timeout"]
